2011-01-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/maemo/new.py:
	* python/mushin/maemo/start.py:
	  Only allow updating when the thing is fully loaded.

2011-01-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/maemo/new.py:
	  Turn off autocapitalization on add project/context/status.

2011-01-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/main.py:
	  When marking tasks as done, only disambiguate uncompleted tasks.

2011-01-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/main.py:
	  Handle invalid id's in show.  Makes show kiss not traceback.

2011-01-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/model/couch.py:
	  Add updated to things.  Set it when saving.

2011-01-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/main.py:
	  Fix a traceback when editing a non-existant id.

2011-01-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/main.py:
	  If we already decode utf-8 when passing args to commands, don't
	  do it again in Add.

2011-01-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/main.py:
	  Add an option to only count open things; for scripts graphing
	  my urgency tasks.

2011-01-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/main.py:
	  Handle utf-8 everywhere.  Assume input from command line and
	  terminal is in utf-8 for now.
	* python/mushin/command/display.py:
	* python/mushin/common/parse.py:
	  Handle utf-8.  Document. add aserts.

2011-01-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/model/couch.py:
	  Allow specifying a different database than mushin.
	* python/mushin/command/main.py:
	  Add a getServer() method on the root GTD command.
	  Use it everywhere.
	* python/mushin/command/list.py: