@@ -1,5 +1,10 @@
 2011-01-22  Thomas Vander Stichele  <thomas at apestaart dot org>
 
+	* python/mushin/command/main.py:
+	  Let through a unique lookup result even if it might be done.
+
+2011-01-22  Thomas Vander Stichele  <thomas at apestaart dot org>
+
 	* python/mushin/maemo/new.py:
 	* python/mushin/maemo/start.py:
 	  Only allow updating when the thing is fully loaded.
